test/src/DataTypeExam1.java
public class DataTypeExam1 {
  public static void main(String[] args) {
    // int a = 2147483648; // error
    long a = 2147483648L;
    System.out.println(a);
  }
}
